# exemplo-apache-pulsar

./: README.md  docker-compose.yml  pyproject.toml
batch/: consumer_batch.py  producer_batch.py
data/: consumer_data.py  producer_data.py
streaming/: consumer.py  producer.py
